# hnir-ccp

./: .gitignore  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_POLICY.md  ETHICS.md  GOVERNANCE.md  POSITIONING.md  ProblemStatement.md  README.md  REPRODUCIBILITY.md  RISKS.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
ccp/: __init__.py  __main__.py  config.py  demo.py  models.py  reason_codes.py
ccp/audit/: __init__.py  logger.py  trace.py
ccp/control/: __init__.py  commands.py  shortcuts.py
ccp/integration/: __init__.py  fallback.py  interceptor.py  llm_adapter.py  schema.py
ccp/integration/adapters/: __init__.py  anthropic_adapter.py  mock.py  openai_adapter.py
ccp/policy/: __init__.py  authorization.py  gate.py  rules.py
ccp/state/: __init__.py  machine.py  session.py  transitions.py
config/: commands.yaml  policies.yaml  states.yaml
docs/adr/: ADR-001-phase3-determinism-and-baseline.md
eval/: README.md  __init__.py  __main__.py  baseline_results.md  compare.py  dataset.py  manifest.json  metrics.py  output.py  run.py  runner.py  schema.py
eval/baselines/: __init__.py  guardrails_ai.py  nemo.py  raw_llm.py
eval/baselines/nemo_config/: config.yml  main.co
eval/benchmarks/: __init__.py  garak_runner.py
eval/results/: results.json  results.md
eval/traces/: adversarial.jsonl  control.jsonl  policy.jsonl  state.jsonl
plans/: COMMUNITY.md  ETHICS.md  INDEX.md  RISKS.md  phase-0-positioning.md  phase-1-repo-skeleton.md  phase-2-v0-demo.md  phase-3-eval-harness.md  phase-4-hitl-workflow.md  phase-5-paper.md  phase-6-publish-release.md  phase-7-web-updates.md  phase-8-cadence.md
tests/: test_adapters.py  test_adversarial_llm.py  test_audit.py  test_config.py  test_control.py  test_eval_compare.py  test_eval_metrics.py  test_integration.py  test_models.py  test_policy.py  test_state.py
