[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hnir-ccp"
version = "1.0.0"
description = "Deterministic control plane for AI agent systems — policy enforcement and safety gating without LLM inference"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
  {name = "Aravind Ravi", email = "aravind@raviaravind.com"},
]
keywords = ["llm", "safety", "control-plane", "agents", "middleware"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pyyaml>=6.0",
  "pydantic>=2.0",
]

[project.scripts]
hnir-ccp = "ccp.demo:main"

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
llm = ["openai>=1.0", "anthropic>=0.20"]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[tool.setuptools.packages.find]
include = ["ccp*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "live: marks tests as requiring live API credentials (deselect with '-m not live')",
]
